91/target/debug/build/anyhow-c69051e9049dd361/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> C:\dev\rust\91\target\debug\build\anyhow-c69051e9049dd361\out\probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
